--- a/episodes/season_19.yml
+++ b/episodes/season_19.yml
@@ -11,7 +11,7 @@ episodes:
   disneyplus_id: cfb4a65d-9894-49a4-a3cd-8a69d5d2e27e
   simpsonsworld_id: 292943427892
   good: false
-  guest_stars:
+  guest_stars: ["Stephen Colbert", "Lionel Richie"]
 - title: Homer of Seville
   season: 19
   episode: 2
@@ -23,7 +23,7 @@ episodes:
   disneyplus_id: 29d746b8-c00f-4017-a385-e7439147f115
   simpsonsworld_id: 350651459856
   good: false
-  guest_stars:
+  guest_stars: ["Plácido Domingo", "Maya Rudolph"]
 - title: Midnight Towboy
   season: 19
   episode: 3
@@ -35,7 +35,7 @@ episodes:
   disneyplus_id: 3aabd561-93f2-4cab-acdf-c2e8f4adc3f8
   simpsonsworld_id: 292968003585
   good: maybe
-  guest_stars:
+  guest_stars: ["Matt Dillon"]
 - title: I Don't Wanna Know Why the Caged Bird Sings
   season: 19
   episode: 4
@@ -47,7 +47,7 @@ episodes:
   disneyplus_id: f5ba0aac-38a1-41f2-a749-87292f0f6ec8
   simpsonsworld_id: 310455875747
   good: maybe
-  guest_stars:
+  guest_stars: ["Steve Buschemi", "Ted Nugent", "Julia Louis-Dreyfus"]
 - title: Treehouse of Horror XVIII
   season: 19
   episode: 5
@@ -60,7 +60,7 @@ episodes:
   disneyplus_id: e3918111-7db4-4a22-a335-fa3a24ec2545
   simpsonsworld_id: 302852163741
   good: false
-  guest_stars:
+  guest_stars: ["Maurice LaMarche"]
 - title: Little Orphan Millie
   season: 19
   episode: 6
@@ -73,7 +73,7 @@ episodes:
   disneyplus_id: 6904d6d9-3499-4cc5-a61f-91ad2d3805f7
   simpsonsworld_id: 302855747799
   good: maybe
-  guest_stars:
+  guest_stars: null
 - title: Husbands and Knives
   season: 19
   episode: 7
@@ -86,7 +86,7 @@ episodes:
   disneyplus_id: 12049833-9d7d-4442-877c-5d2cb51d63e7
   simpsonsworld_id: 294772803561
   good: maybe
-  guest_stars:
+  guest_stars: ["Alan Moore", "Art Spiegelman", "Dan Clowes", "Jack Black", "Maurice LaMarche"]
 - title: Funeral for a Fiend
   season: 19
   episode: 8
@@ -99,7 +99,7 @@ episodes:
   disneyplus_id: 63ecb9f3-2160-4fa4-a70a-e4b969f3a541
   simpsonsworld_id: 310458947589
   good: maybe
-  guest_stars:
+  guest_stars: ["Kelsey Grammer", "David Hyde Pierce", "John Mahoney", "Keith Olbermann"]
 - title: Eternal Moonshine of the Simpson Mind
   season: 19
   episode: 9
@@ -112,7 +112,7 @@ episodes:
   disneyplus_id: d0790333-bd60-4a6c-bc3a-f81924537052
   simpsonsworld_id: 302847555877
   good: maybe
-  guest_stars:
+  guest_stars: null
 - title: E. Pluribus Wiggum
   season: 19
   episode: 10
@@ -124,7 +124,7 @@ episodes:
   disneyplus_id: 04b3942a-b531-45e1-820c-c8b1447affd9
   simpsonsworld_id: 307179075535
   good: maybe
-  guest_stars:
+  guest_stars: ["Jon Stewart", "Dan Rather"]
 - title: That 90's Show
   season: 19
   episode: 11
@@ -136,7 +136,7 @@ episodes:
   disneyplus_id: 496a92e0-6d0f-4b93-874a-6466ceb46185
   simpsonsworld_id: 299664963588
   good: maybe
-  guest_stars:
+  guest_stars: ["Kurt Loder", "Weird Al Yankovic"]
 - title: Love, Springfieldian Style
   season: 19
   episode: 12
@@ -149,7 +149,7 @@ episodes:
   disneyplus_id: cb1aece7-21a5-4ff0-93a1-be32ff6b6454
   simpsonsworld_id: 310471235766
   good: maybe
-  guest_stars:
+  guest_stars: null
 - title: The Debarted
   season: 19
   episode: 13
@@ -161,7 +161,7 @@ episodes:
   disneyplus_id: 6ec0564f-066c-4db8-9c0b-525fb045760c
   simpsonsworld_id: 302849603730
   good: maybe
-  guest_stars:
+  guest_stars: ["Topher Grace", "Terry Gross"]
 - title: Dial 'N' for Nerder
   season: 19
   episode: 14
@@ -173,7 +173,7 @@ episodes:
   disneyplus_id: acde483e-f4e3-45f8-b751-cb9096b35221
   simpsonsworld_id: 302849091724
   good: maybe
-  guest_stars:
+  guest_stars: null
 - title: Smoke on the Daughter
   season: 19
   episode: 15
@@ -185,7 +185,7 @@ episodes:
   disneyplus_id: 811e0263-04e6-439d-b44d-b5e8ed1b40bd
   simpsonsworld_id: 310477379554
   good: maybe
-  guest_stars:
+  guest_stars: null
 - title: Papa Don't Leech
   season: 19
   episode: 16
@@ -197,7 +197,7 @@ episodes:
   disneyplus_id: 59529fea-4dd3-40fb-82ba-f6fac7ae816a
   simpsonsworld_id: 283768387739
   good: maybe
-  guest_stars:
+  guest_stars: ["Beverly D'Angelo", "Natalie Maines", "Martie Maguire", "Emily Strayer"]
 - title: Apocalypse Cow
   season: 19
   episode: 17
@@ -209,7 +209,7 @@ episodes:
   disneyplus_id: 1a63a3b9-4b72-4e3f-80d8-bf00d962ab72
   simpsonsworld_id: 302847555768
   good: maybe
-  guest_stars:
+  guest_stars: ["Zooey Deschanel"]
 - title: Any Given Sundance
   season: 19
   episode: 18
@@ -222,7 +222,7 @@ episodes:
   disneyplus_id: 160f68fb-5e93-4905-8721-fdb30ac750ab
   simpsonsworld_id: 283769923976
   good: maybe
-  guest_stars:
+  guest_stars: ["Jim Jarmusch", "John C. Reilly"]
 - title: Mona Leaves-a
   season: 19
   episode: 19
@@ -234,7 +234,7 @@ episodes:
   disneyplus_id: 6b46ca89-e6d0-43d8-8e18-cab6a8c392b4
   simpsonsworld_id: 299670083511
   good: maybe
-  guest_stars:
+  guest_stars: ["Glenn Close", "Lance Armstrong"]
 - title: All About Lisa
   season: 19
   episode: 20
@@ -247,4 +247,4 @@ episodes:
   disneyplus_id: 1ac6f2b6-a083-4be3-aa46-9d5e185c1451
   simpsonsworld_id: 294774851723
   good: maybe
-  guest_stars:
+  guest_stars: ["Drew Carey"]
