--- a/episodes/season_20.yml
+++ b/episodes/season_20.yml
@@ -11,7 +11,7 @@ episodes:
   disneyplus_id: b41e3be6-a769-407d-a3fc-a277e56801f3
   simpsonsworld_id: 311088195682
   good: true
-  guest_stars:
+  guest_stars: ["Julia Louis-Dreyfus", "Robert Forster", "Joe Mantegna"]
 - title: Lost Verizon
   season: 20
   episode: 2
@@ -24,7 +24,7 @@ episodes:
   disneyplus_id: 342c9998-d824-4e01-9a5b-9b6db32bf258
   simpsonsworld_id: 304458307742
   good: false
-  guest_stars:
+  guest_stars: ["Denis Leary", "Brian Grazer"]
 - title: Double, Double, Boy in Trouble
   season: 20
   episode: 3
@@ -36,7 +36,7 @@ episodes:
   disneyplus_id: 37918594-db18-449e-a6cc-d82abf914a4b
   simpsonsworld_id: 304460355919
   good: maybe
-  guest_stars:
+  guest_stars: ["Joe Montana"]
 - title: Treehouse of Horror XIX
   season: 20
   episode: 4
@@ -49,7 +49,7 @@ episodes:
   disneyplus_id: d2d09518-7a45-4fb6-882a-a97051fe2e27
   simpsonsworld_id: 691895363987
   good: false
-  guest_stars:
+  guest_stars: null
 - title: Dangerous Curves
   season: 20
   episode: 5
@@ -62,7 +62,7 @@ episodes:
   disneyplus_id: 9c79d330-2b3d-48d8-adb8-ee9781e48fb4
   simpsonsworld_id: 311675459549
   good: maybe
-  guest_stars:
+  guest_stars: ["Maurice LaMarche"]
 - title: Homer and Lisa Exchange Cross Words
   season: 20
   episode: 6
@@ -74,7 +74,7 @@ episodes:
   disneyplus_id: 52d5c4bb-bc9c-4463-862a-2b241726510f
   simpsonsworld_id: 310541891517
   good: false
-  guest_stars:
+  guest_stars: ["Merl Reagle", "Will Shortz", "Scott Thompson"]
 - title: Mypods and Boomsticks
   season: 20
   episode: 7
@@ -86,7 +86,7 @@ episodes:
   disneyplus_id: 04436cd4-2791-45a4-b513-1e436dcec79b
   simpsonsworld_id: 310498883779
   good: maybe
-  guest_stars:
+  guest_stars: ["Shohreh Aghdashloo"]
 - title: The Burns and the Bees
   season: 20
   episode: 8
@@ -98,7 +98,7 @@ episodes:
   disneyplus_id: eff7ae0c-3a24-4a1d-af82-ca8771821789
   simpsonsworld_id: 310506051725
   good: true
-  guest_stars:
+  guest_stars: ["Mark Cuban", "Jeff Bezos", "Marv Albert"]
 - title: Lisa the Drama Queen
   season: 20
   episode: 9
@@ -110,7 +110,7 @@ episodes:
   disneyplus_id: 68ee0aa3-11db-4692-9bca-d8f8601c3a5a
   simpsonsworld_id: 292944963870
   good: maybe
-  guest_stars:
+  guest_stars: ["Emily Blunt", "Pete Wentz", "Patrick Stump", "Joe Trohman", "Andy Hurley"]
 - title: Take My Life, Please
   season: 20
   episode: 10
@@ -123,7 +123,7 @@ episodes:
   disneyplus_id: 1274848a-af0a-4883-866f-4cb68b0e503d
   simpsonsworld_id: 273728067781
   good: maybe
-  guest_stars:
+  guest_stars: null
 - title: How the Test Was Won
   season: 20
   episode: 11
@@ -136,7 +136,7 @@ episodes:
   disneyplus_id: 67652d71-984c-4ae6-a681-039dc438e679
   simpsonsworld_id: 277134915702
   good: maybe
-  guest_stars:
+  guest_stars: null
 - title: No Loan Again, Naturally
   season: 20
   episode: 12
@@ -149,7 +149,7 @@ episodes:
   disneyplus_id: 7b36dd78-924e-40ee-8be2-ce89a6b40964
   simpsonsworld_id: 273029699673
   good: maybe
-  guest_stars:
+  guest_stars: ["Maurice LaMarche"]
 - title: Gone Maggie Gone
   season: 20
   episode: 13
@@ -161,7 +161,7 @@ episodes:
   disneyplus_id: 7142d0eb-2815-4108-b9d6-af8624dc2ab1
   simpsonsworld_id: 273030211958
   good: maybe
-  guest_stars:
+  guest_stars: ["Ed Begley, Jr."]
 - title: In the Name of the Grandfather
   season: 20
   episode: 14
@@ -173,7 +173,7 @@ episodes:
   disneyplus_id: 788f0f9a-99a6-44a5-b575-b65feeee9152
   simpsonsworld_id: 307849283838
   good: maybe
-  guest_stars:
+  guest_stars: ["Colm Meaney", "Glen Hansard", "Markéta Irglová"]
 - title: Wedding for Disaster
   season: 20
   episode: 15
@@ -186,7 +186,7 @@ episodes:
   disneyplus_id: 8de216fa-ab27-4068-abba-7b3d64888854
   simpsonsworld_id: 273024579646
   good: maybe
-  guest_stars:
+  guest_stars: ["Kelsey Grammer"]
 - title: Eeny Teeny Maya Moe
   season: 20
   episode: 16
@@ -198,7 +198,7 @@ episodes:
   disneyplus_id: 5c605010-e2c7-442f-afc8-2ef9e6845e94
   simpsonsworld_id: 273066051746
   good: maybe
-  guest_stars:
+  guest_stars: null
 - title: The Good, The Sad, and The Drugly
   season: 20
   episode: 17
@@ -211,7 +211,7 @@ episodes:
   disneyplus_id: ba710d3f-9c05-4213-9311-ea4d6ae60d7c
   simpsonsworld_id: 273057347598
   good: maybe
-  guest_stars:
+  guest_stars: ["Anne Hathaway"]
 - title: Father Knows Worst
   season: 20
   episode: 18
@@ -224,7 +224,7 @@ episodes:
   disneyplus_id: d4a21611-7e67-480d-940d-3291933e8328
   simpsonsworld_id: 273070659848
   good: maybe
-  guest_stars:
+  guest_stars: null
 - title: Waverly Hills 9-0-2-1-D'oh
   season: 20
   episode: 19
@@ -236,7 +236,7 @@ episodes:
   disneyplus_id: 236d3723-c091-4c65-9147-fd39dd2183bb
   simpsonsworld_id: 299732035764
   good: maybe
-  guest_stars:
+  guest_stars: ["Elliot Page", "Maurice LaMarche"]
 - title: Four Great Women and a Manicure
   season: 20
   episode: 20
@@ -248,7 +248,7 @@ episodes:
   disneyplus_id: 1cf52f6d-4c3e-45d1-81d0-294bb257f1c8
   simpsonsworld_id: 273732163923
   good: maybe
-  guest_stars:
+  guest_stars: ["Jodie Foster"]
 - title: Coming To Homerica
   season: 20
   episode: 21
@@ -260,4 +260,4 @@ episodes:
   disneyplus_id: 527aec32-aac9-47c3-ac7e-72509b9a9fe7
   simpsonsworld_id: 729848899646
   good: maybe
-  guest_stars:
+  guest_stars: null
